tests/rosetta/transpiler/Swift/md5.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden1034261215/001/main.swift:34:23: error: type 'testpkg' has no member 'MD5Hex'
32 | }
33 | for pair in ([(["d41d8cd98f00b204e9800998ecf8427e", ""] as! [String]), (["0cc175b9c0f1b6a831c399e269772661", "a"] as! [String]), (["900150983cd24fb0d6963f7d28e17f72", "abc"] as! [String]), (["f96b697d7cb7938d525a2f31aaf161d0", "message digest"] as! [String]), (["c3fcd3d76192e4007dfb496cca67e13b", "abcdefghijklmnopqrstuvwxyz"] as! [String]), (["d174ab98d277d9f5a5611c2c9f419d9f", "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"] as! [String]), (["57edf4a22be3c955ac49da2e2107b67a", ("12345678901234567890" + "123456789012345678901234567890123456789012345678901234567890")] as! [String]), (["e38ca1d920c4b8b8d3946b2c72f01680", "The quick brown fox jumped over the lazy dog's back"] as! [String])] as! [[String]]) {
34 |     let sum = testpkg.MD5Hex((pair[1] as! String))
   |                       `- error: type 'testpkg' has no member 'MD5Hex'
35 |     if (String(describing: sum) != (pair[0] as! String)) {
36 |         print(_p("MD5 fail"))

/tmp/TestSwiftTranspiler_Rosetta_Golden1034261215/001/main.swift:34:39: warning: forced cast of 'String' to same type has no effect
32 | }
33 | for pair in ([(["d41d8cd98f00b204e9800998ecf8427e", ""] as! [String]), (["0cc175b9c0f1b6a831c399e269772661", "a"] as! [String]), (["900150983cd24fb0d6963f7d28e17f72", "abc"] as! [String]), (["f96b697d7cb7938d525a2f31aaf161d0", "message digest"] as! [String]), (["c3fcd3d76192e4007dfb496cca67e13b", "abcdefghijklmnopqrstuvwxyz"] as! [String]), (["d174ab98d277d9f5a5611c2c9f419d9f", "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"] as! [String]), (["57edf4a22be3c955ac49da2e2107b67a", ("12345678901234567890" + "123456789012345678901234567890123456789012345678901234567890")] as! [String]), (["e38ca1d920c4b8b8d3946b2c72f01680", "The quick brown fox jumped over the lazy dog's back"] as! [String])] as! [[String]]) {
34 |     let sum = testpkg.MD5Hex((pair[1] as! String))
   |                                       `- warning: forced cast of 'String' to same type has no effect
35 |     if (String(describing: sum) != (pair[0] as! String)) {
36 |         print(_p("MD5 fail"))

/tmp/TestSwiftTranspiler_Rosetta_Golden1034261215/001/main.swift:35:45: warning: forced cast of 'String' to same type has no effect
33 | for pair in ([(["d41d8cd98f00b204e9800998ecf8427e", ""] as! [String]), (["0cc175b9c0f1b6a831c399e269772661", "a"] as! [String]), (["900150983cd24fb0d6963f7d28e17f72", "abc"] as! [String]), (["f96b697d7cb7938d525a2f31aaf161d0", "message digest"] as! [String]), (["c3fcd3d76192e4007dfb496cca67e13b", "abcdefghijklmnopqrstuvwxyz"] as! [String]), (["d174ab98d277d9f5a5611c2c9f419d9f", "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"] as! [String]), (["57edf4a22be3c955ac49da2e2107b67a", ("12345678901234567890" + "123456789012345678901234567890123456789012345678901234567890")] as! [String]), (["e38ca1d920c4b8b8d3946b2c72f01680", "The quick brown fox jumped over the lazy dog's back"] as! [String])] as! [[String]]) {
34 |     let sum = testpkg.MD5Hex((pair[1] as! String))
35 |     if (String(describing: sum) != (pair[0] as! String)) {
   |                                             `- warning: forced cast of 'String' to same type has no effect
36 |         print(_p("MD5 fail"))
37 |         print(_p("  for string,"), _p((pair[1] as! String)))

/tmp/TestSwiftTranspiler_Rosetta_Golden1034261215/001/main.swift:37:48: warning: forced cast of 'String' to same type has no effect
35 |     if (String(describing: sum) != (pair[0] as! String)) {
36 |         print(_p("MD5 fail"))
37 |         print(_p("  for string,"), _p((pair[1] as! String)))
   |                                                `- warning: forced cast of 'String' to same type has no effect
38 |         print(_p("  expected:  "), _p((pair[0] as! String)))
39 |         print(_p("  got:       "), _p(sum))

/tmp/TestSwiftTranspiler_Rosetta_Golden1034261215/001/main.swift:38:48: warning: forced cast of 'String' to same type has no effect
36 |         print(_p("MD5 fail"))
37 |         print(_p("  for string,"), _p((pair[1] as! String)))
38 |         print(_p("  expected:  "), _p((pair[0] as! String)))
   |                                                `- warning: forced cast of 'String' to same type has no effect
39 |         print(_p("  got:       "), _p(sum))
40 |     }
